--- a/src/app/hodlogin-page/hodlogin-page.component.html
+++ b/src/app/hodlogin-page/hodlogin-page.component.html
@@ -16,7 +16,7 @@
               [(ngModel)]="HODlogin.hod_id" name="HODlogin.hod_id"
                 type="text"
                 class="form-control"
-                placeholder="Email address"
+                placeholder="Enter Number"
               />
             </label>
   
@@ -27,7 +27,7 @@
               [(ngModel)]="HODlogin.password" name="HODlogin.password"
                 type="text"
                 class="form-control"
-                placeholder="password"
+                placeholder="Enter Password"
               />
             </label>
     
