--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
             <span class="form-label d-block" class="row mx-0 justify-content-center">Admin Email</span>
             <br>
             <input
-            [(ngModel)]="adminLogin.admin_email" name="adminLogin.admin_email"
+            [(ngModel)]="adminLogin.admin_id" name="adminLogin.admin_id"
               type="text"
               class="form-control"
               placeholder="Email address"
