--- a/src/app/techpage/techpage.component.html
+++ b/src/app/techpage/techpage.component.html
@@ -40,7 +40,7 @@
                     <ul>
                     <li>
                       <a href="#" class="nav-link active" id="ModalExample" >
-                        <button type="button" class="btn btn-success">LOGOUT</button>
+                        <button type="button" class="btn btn-success" (click)="logout()">LOGOUT</button>
                       </a>
                     </li>
                   </ul>
