--- a/src/app/report/report.component.css
+++ b/src/app/report/report.component.css
@@ -1,19 +1,8 @@
-
-.container-fluid{
-  flex:1;
-}
-
-.container2{
-  flex:1;
-}
-
 .tab-content {
     float: right;
     width: 80%;
     margin-right: 0%;
-    
   }
-  
   .nav-tabs {
   position: center;
   width: 335px;
@@ -22,26 +11,13 @@
   float: left;
   width: 100%;
   
+top:50%;  
+transform: translateY(-50%);
   
-   font-family: "Times New Roman";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 25px;
-  letter-spacing: 0.035em;
-  width: 335px;
-  
-  left: -2px;
-  top: 110px;
-  
-  background: rgba(255, 255, 255, 0.8);
- 
+  background: rgba(155, 154, 154, 0.8);
+  border-right: 5px solid #0e0f52;
   
   
-  }
-
-  .tab-content{
-    border-left: 5px solid #0e0f52;
   }
   
   .nav-item{
@@ -69,6 +45,7 @@
     border: none;
   }
   
+
   .reqhead1{
     
       border: 2px solid rgb(255, 255, 255);
@@ -113,20 +90,20 @@
   
   footer{
     background: black;
-    padding: 8px;
-    color: #eee;
-    display: center;
-    /* position: absolute; */
-    /* bottom: 0;
-    width: 100%; */
+      padding: 8px;
+      color: #eee;
+      display: center;
+     
+      bottom: 0;
+      width: 100%;
   }
   
   
   
   /*Navigation*/
-/*   
-  nav {
-    height: 72px;
+  
+  .header {
+    height: 81px;
     background: #0c0c0c;
     width: 100%;
     margin: 0;
@@ -140,18 +117,18 @@
     z-index: 100;
   }
   
-  nav a {
+  .header a {
     padding: 0 32px;
     color: #eee;
     transition: 0.4s;
   }
   
-  nav a:hover {
+  .header a:hover {
     text-decoration: none;
     color: red;
   }
   
-  nav ul {
+  .header ul {
     display: flex;
     list-style: none;
     justify-content: space-around;
@@ -162,7 +139,7 @@
   
   .active {
     color:#0e0d0d;
-  } */
+  }
   
   #menu-icon {
     height: 100%;
@@ -182,15 +159,12 @@
     padding: 16px;
     font-size: 16px;
     border: none;
-    cursor:pointer
-    
   }
   
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
     position: relative;
     display: inline-block;
-    cursor:pointer
   }
   
   /* Dropdown Content (Hidden by Default) */
@@ -220,8 +194,27 @@
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {background-color: #3e8e41;}
   
+  select{
+    margin: 0 5px;
+  }
   
   select#Cater,
+  input.form-control {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    margin-bottom: 1rem;
+  }
+
+  select#Cater1,
   input.form-control {
     display: block;
     width: 100%;
@@ -266,52 +259,31 @@
   
   /* Clear floats after image containers */
   .row::after {
-    content: "";
     clear: both;
     display: table;
   }
   
-.content{
-    border: 1px solid #ccc;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-  padding: 20px;
+  #b12{
+    float: right;
 }
-
-.ticket{
-    border: 1px solid #ccc;
-    box-shadow: 2px 2px 2px rgba(94, 93, 93, 0.993);
-    font-family: "Times New Roman";
-    font-style: normal;
-    
   
-}
-
-.ticket:hover{
-    text-decoration: none;
-    
-    border-left: 8px solid rgb(14, 60, 90);
-    
-
-}
-
-.request{
-    border: 2.5px solid #ccc;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-    padding: 15px;
-}
- 
-
+  
+  
+  
 .sideNav {
   float: left;
-  box-shadow: 5px 0 2px #969292;
+  box-shadow: 5px 0 2px #575656;
   width: 335px;
   height: 1055px;
+  
   
 }
 
 .breadcrumbNav {
   margin: 12% 10px;
-  padding: 20px 30px;      
+  padding: 20px 30px; 
+  top:0%;  
+transform: translateY(60%);     
 }
 #breadcrumbpadding {
 
@@ -325,12 +297,12 @@ a {
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
-  /* identical to box height */
+  
 
   letter-spacing: 0.035em;
-  text-transform: capitalize;
-
-  color: #005596;
+  
+  
+  color: #2e2e2e;
   text-decoration: none;
 }
 
@@ -342,7 +314,7 @@ a {
 .breadcrumb-item.active {
  
   
-  border-bottom: 3px solid #005596;
+  border-bottom: 3px solid #4b4c4d;
   width: 115px;  
   
 }
@@ -355,68 +327,8 @@ a {
 
 #hover:hover {
   font-weight: bold;
+  color: rgb(8, 8, 8);
+  
  
  
 }
-  
-
-.nav-item{
-    padding: 8px 24px;
-    
-    transition: 0.4s;
-    font-family: 'georgia';
-    margin-bottom: 24px;
-    margin-left: 24px;
-    font-weight: bold;
-    cursor: pointer;
-    background: white;
-  }
-  
-  .nav-item:hover {
-    
-    text-decoration: none;
-    padding: 8px 0;
-    border-left: 8px solid rgb(14, 60, 90);
-    box-shadow: 4px 4px 4px rgba(70, 69, 69, 0.993);
-  }
-  
-  
-  .nav-link.active {
-    border: none;
-  }
-
-  
-  .header {
-    height: 72px;
-    background: #0c0c0c;
-    width: 100%;
-    margin: 0;
-    position: fixed;
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 20px;
-    display: flex;
-    justify-content: space-between;
-    padding:0 16px 0 0;
-    box-sizing: border-box;
-    z-index: 100;
-  }
-  
-  .header a {
-    padding: 0 32px;
-    color: #eee;
-    transition: 0.4s;
-  }
-  
-  .header a:hover {
-    text-decoration: none;
-    color: red;
-  }
-  
-  .header ul {
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-    margin: 0;
-  }
