--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -31,17 +31,16 @@
                 <ul>
                     <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>View Requests</a></li>
                     <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/adminprogress">View Progress</a></li>
-                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="">Close Logs</a></li>
-
-                    <div class="reportsDiv">
-                        <h3 class="reportText">Reports</h3>
-                        <div class="typesofreports" >
-                            <button class="alltasks " id="reports" (click)="downloadFile()" > All Tasks</button>
-                            <button class="activetasks " id="reports">Active Tasks</button>
-                            <button class="closedtasks " id="reports">Closed Tasks</button>
-                         
+                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/admincloselog">Close Logs</a></li>
+                    
+                        <div class="dropdown">
+                            <button class="dropbtn">Report</button>
+                            <div class="dropdown-content" >
+                              <a class="nav-link active" id="ModalExample" (click)="downloadFile()">All Tasks</a>
+                              <a class="nav-link active" id="ModalExample">Active Tasks</a>
+                              <a class="nav-link active" id="ModalExample">Closed Tasks</a>
+                            </div>
                         </div>
-                    </div>
                 </ul>
             </nav>
         </div>
