--- a/src/app/track-request/track-request.component.html
+++ b/src/app/track-request/track-request.component.html
@@ -9,13 +9,6 @@
         <div id="menu-icon">
             <i class="fas fa-bars"></i>
         </div>
-        <ul>
-            <li>
-
-                <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
-                        class="btn btn-success">LOGOUT</button></a>
-            </li>
-        </ul>
 
     </nav>
 </div>
@@ -40,11 +33,7 @@
                     <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
                             disabled="true"><b>TRACKING</b></a></li>
                 </ul>
-    
-                <br>
-                <br>
-                <br>
-    
+   
                 <ul>
                     <li>
         
@@ -56,19 +45,25 @@
             </nav>
         </div>
     <div class="contentContainerRight">
-        <form class="backFrom">
+        <div class="backFrom" >
             <h3 class="toptitle">Staff Track Request</h3>
-            <H4>Click on the tabs to view progress of your request(s)</H4>
+        </div>
+        <div class="stats d-flex justify-content-left px-4">
+        <form>
 
-            <div class="container">
-                <label for="zero" id="red" class="todo" (click)="recieveAllRequest()">Todo</label>
+            <div class="w-100% rounded-1 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3" >
+                <h1><b>Click on the tabs to view progress of your request(s)</b></h1>
+                <label for="zero" id="red" class="todo" (click)="recieveAllRequest()">Todo         {{todo}}</label>
                 <label for="zero" id="blue" class="Assigned" (click)="assignTask()">Assigned</label>
                 <label for="fifty" id="orange" class="InProgress" (click)="getInprogress()">InProgress</label>
                 <label for="zero" id="gray" class="OnHold" (click)="getOnHoldTasks()">OnHold</label>
                 <label for="hundred" id="green" class="Done" (click)="getCompleteTasks()">Done</label>
             </div>
-
-            <div class="middleTableDiv">
+            </form>
+<form>
+    
+            <div class="d-flex justify-content-center w-100 rounded-5 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3" style="width:100%">
+                <h1><b>REQUESTS</b></h1>
                 <div class="middleTableDivTextMargin" *ngFor="let request of allRequest">
                     <p>Category:{{request.category}}</p>
                     <p>Description:{{request.description}}</p>
@@ -82,6 +77,7 @@
             </div>
 
         </form>
+    </div>
     </div>
 
     <footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
