--- a/src/app/admincloselog/admincloselog.component.html
+++ b/src/app/admincloselog/admincloselog.component.html
@@ -29,7 +29,7 @@
         <div class="sideNav">
             <nav class="breadcrumbNav">
                 <ul>
-                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#" >View Requests</a></li>
+                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#" routerLink="/adminpage"  >View Requests</a></li>
                     <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>Close Logs</a></li>
                     
                         
