--- a/src/app/adminprogress/adminprogress.component.html
+++ b/src/app/adminprogress/adminprogress.component.html
@@ -38,7 +38,7 @@
             </nav>
         </div>
   
-        <div class="tab-content border ps-3 mt-5" id="myTabContent">
+        <div class="tab-content  ps-3 mt-5" id="myTabContent">
   
                 <div class = "contentForm" >
                    
