--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -140,6 +140,7 @@ a {
 .logstats{
   display: flex;
   flex-direction: column;
+  
 
 }
 .logstats,label{
@@ -147,14 +148,33 @@ a {
   text-align: center;
 }
 .averageTitle {
+ 
+  margin-right: 25%;
   font-weight: 500;
   color: #005596;
+}
+
+.numberStats{
+  background-color: white;
+  border-radius: 8px;
+  padding: 6px;
+  color: black;
+}
+.unassigned{
+  background-color: rgb(204, 204, 204);
+  color: white;
+  border-radius:8px;
+  width: 175px;
+  padding: 4px;
+}
+.unassigned:hover{
+  font-weight: 500;
 }
 .pendingTasks{
   background-color: rgb(250, 26, 26);
   color: white;
   border-radius:8px;
-  width: 120px;
+  width: 175px;
   padding: 4px;
 }
 .pendingTasks:hover{
@@ -164,20 +184,20 @@ a {
   background-color: orange;
   color: white;
   border-radius:8px;
-  width: 120px;
+  width: 175px;
   padding: 4px;
 }
 .In-progressTasks:hover{
   font-weight: 500;
 }
-.In-completedTasks{
+.completedTasks{
   background-color: green;
   color: white;
   border-radius:8px;
-  width: 120px;
+  width: 175px;
   padding: 4px;
 }
-.In-completedTasks:hover{
+.completedTasks:hover{
   font-weight: 500;
 }
 
@@ -185,7 +205,7 @@ a {
   background-color: black;
   color: white;
   border-radius:8px;
-  width: 120px;
+  width: 175px;
   padding: 4px;
 }
 .ClosedTasks:hover{
