--- a/src/app/track-request/track-request.component.html
+++ b/src/app/track-request/track-request.component.html
@@ -55,9 +55,9 @@
                 <h1><b>Click on the tabs to view progress of your request(s)</b></h1>
                 <label for="zero" id="red" class="todo" (click)="recieveAllRequest()">Todo         {{todo}}</label>
                 <label for="zero" id="blue" class="Assigned" (click)="assignTask()">Assigned</label>
-                <label for="fifty" id="orange" class="InProgress" (click)="getInprogress()">InProgress</label>
-                <label for="zero" id="gray" class="OnHold" (click)="getOnHoldTasks()">OnHold</label>
-                <label for="hundred" id="green" class="Done" (click)="getCompleteTasks()">Done</label>
+                <label for="fifty" id="orange" class="InProgress" (click)="getInprogress()">InProgress   {{progress}}</label>
+                <label for="zero" id="gray" class="OnHold" (click)="getOnHoldTasks()">OnHold        {{onHold}}</label>
+                <label for="hundred" id="green" class="Done" (click)="getCompleteTasks()">Done       {{completed}}</label>
             </div>
             </form>
 <form>
