--- a/hodpage/hodpage.component.html
+++ b/hodpage/hodpage.component.html
@@ -1,106 +1,157 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8" />
-    <title>HOD VIEW </title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-</head>
 <div class="container-fluid">
     <!-- <body class="container"> -->
-<div class="log d-flex justify-content-end">
-    <NAv>
-        <div id="logo-text">
-            <a href="#">
-                <img src="../../../assets/images/tut.png" alt="SMART FARM"
-                    style="float: left;height: 72px;width: 225px;">
-            </a>
+        <div class="log d-flex justify-content-end">
+            <nav class="header">
+                <div id="logoDiv">
+                    <a>
+                        <img class="logo" src="../../../assets/images/tut.png" alt="SMART FARM"
+                            style="float: left;height: 70px;width: 225px;" routerLink="read">
+                    </a>
+                </div>
+                <div id="menu-icon">
+                    <i class="fas fa-bars"></i>
+                </div>
+               
+        
+            </nav>
         </div>
-        <div id="menu-icon">
-            <i class="fas fa-bars"></i>
-        </div>
-        <ul>
-            
-            </ul>
-    </NAv>
-</div>
-
-
-<br>
-<br>
-<br>
-<br>
-
-
+</div>  
 <div class="container2 d-flex justify-content-between ">
-    <ul class="nav nav-tabs flex-column justify-content-center" id="myTab" role="tablist">
-
-
-        <li class="nav-item" role="presentation" id="doing-tab1">
-            <button class="nav-link active colorRed" id="doing-tab" data-bs-toggle="tab" data-bs-target="#doing"
-                type="button" role="tab" aria-controls="doing" aria-selected="true">
-                <br><a>View Requests</a></button>
-        </li>
-        <li class="nav-item" role="presentation" id="doing-tab2">
-            <button class="nav-link colorAmber" id="in-progress-tab" data-bs-toggle="tab" data-bs-target="#in-progress"
-                type="button" role="tab" aria-controls="in-progress" aria-selected="false"><br><a>View Progress</a></button>
-
-        </li>
-    </ul>
-<br>
-<br>
-<br>
-<br>
-    <h2 class =" H"> HOD View Request</h2>
-   <br>
-   <br>
-
-<html>
-<head>
-<!-- Include Bootstrap CSS -->
-<link rel="stylesheet" href="https:/bootstrap/dist/css/bootstrap.min.css">
-</head>
-<body>
-<div class="container">
-<table class="table">
-  <thead>
-    <tr>  
-      <th scope="col">Staff name</th>
-      <th scope="col">Description</th>
-      <th scope="col">Venue</th>
-      <th scope="col">Category</th>
-      <th scope="col">Request date</th>
-      <th scope="col">Priority</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor ="let me of readData" >
-      <th scope=*ngFor ="let me of readData">{{me.staff_name}} {{me.staff_surname}}</th>
-      <td>Description :{{me.description}}</td>
-      <td>{{me.venue}}</td>
-      <td>{{me.category}}</td>
-      <td>{{me.req_date}}</td>
-      <td>{{me.priority}}</td>
-      
-    </tr>
-    <tr>
-      <th >Lee Mahlangu</th>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-  </tbody>
-</table>
+    <div class="sideNav">
+        <nav class="breadcrumbNav">
+            <ul>
+                <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" 
+                  disabled  >View Requests</a></li>
+                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"  routerLink="/hodviewProgress">View Progress</a></li>
+            </ul>
+        </nav>
+    </div>
 </div>
 
-    <div class="tab-content ps-3 mt-4" id="myTabContent"></div>
-     
+<br>
+<br>
+<br>
 
-            <footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
-            </footer>
+<div class="tab-content ps-5" id="myTabContent">
+    <div class="tab-pane fade show active" id="doing" role="tabpanel" aria-labelledby="doing-tab">
 
+        <br>
+            <div class="content card mt-4 p-4">
+
+        
+                <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">HOD View Requests</h1>
+
+                
+                <table class="table">
+                    <thead class="thead-dark">
+                      <tr>
+                        <th scope="col">Staff Name</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Venue</th>
+                        <th scope="col">category</th>
+                        <th scope="col">Request Date</th>
+                        <th scope="col">Priority</th>
+                        
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let data of readData">
+                        <td> {{ data.staff_name }} {{ data.staff_surname }}</td>
+                        <td>{{ data.description }}</td>
+                        <td>{{ data.venue}}</td>
+                        <td>{{ data.category }}</td>
+                        <td>{{ data.req_date }}</td>
+                        <td>{{ data.priority }}</td>
+                        <td></td>
+                        
+                      </tr>
+                    </tbody>
+                  </table>
+                  
+               
+            </div>
+
+            <!-- <form method="POST"
+                class="w-100 rounded-1 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3"
+                enctype="multipart/form-data">
+                <div class="reqhead1">SEND REQUEST</div>
+                <div *ngIf="showSuccessMsg" class="alert alert-success" role="alert">
+                    <strong>{{successmsg}}</strong>
+                    <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert"
+                        aria-label="Close"></button>
+                </div>
+
+                <label class="d-block mb-4">
+                    <br>
+                    <span class="form-label d-block">
+                        <h4>Description</h4>
+                    </span>
+                    <textarea class="form-control" rows="3" [(ngModel)]="requestform.description"
+                        name="requestform.description" placeholder="Please describe your problem"></textarea>
+                </label>
+
+                <label class="Cater" for="Cater">
+
+                    <h4>Catergory</h4>
+
+                    <select id="Cater" [(ngModel)]="requestform.category" name="requestform.category">
+                        <option value="#">Select Catergory</option>
+                        <option value="Hardware">Hardware</option>
+                        <option value="Hardware">Software</option>
+                        <option value="Hardware">Electrical</option>
+                    </select>
+                </label>
+
+                <div class="form-group">
+                    <br>
+                    <select (change)="buldingNoSelect($event)" class="form-control mb-2 mr-sm-2">
+                        <option value="">Select Building Number</option>
+                        <option *ngFor="let bld of bld_no" value="{{bld}}">{{bld}}</option>
+                    </select>
+                    <br>
+                    <select (change)="getVunueSelected($event)" class="form-control mb-2 mr-sm-2">
+                        <option value="#">---Select Vanue---</option>
+                        <option *ngFor="let vanue of selectedBuilding" value="{{vanue.v}}">{{vanue.v}}</option>
+                    </select>
+                </div>
+
+
+
+                <label for="formFileDisabled" class="form-label input-group"><span>
+                        <h4>Image</h4>
+                    </span>
+
+                    <input class="form-control" [(ngModel)]="requestform.Image" name="requestform.Image" type="file"
+                        id="formFileDisabled" />
+                </label>
+
+                <label class="d-block mb-4 invisible">
+                    <span class="form-label d-block">
+                        <h4>Staff Number</h4>
+                    </span>
+                    <input type="text" class="form-control" placeholder="235578933"
+                        [(ngModel)]="requestform.staff_id" name="requestform.staff_id" name="requestform.venue"
+                        readonly />
+                </label>
+
+                <div class="mb-3">
+                    <button type="submit" (click)="clear()" (click)="request()"
+                        class="btn btn-primary px-3 rounded-3">
+                        Submit
+                    </button>
+                </div>
+
+                <div class="d-block text-end">
+
+                </div>
+
+
+            </form> -->
+
+
+        </div>
+
+
+
+    </div>
 
