--- a/src/app/adminprogress/adminprogress.component.html
+++ b/src/app/adminprogress/adminprogress.component.html
@@ -37,8 +37,41 @@
                         <div class="progressTotalsDiv"  >
                           <div class="contentMargin">
                             <h3 class="totaltasksTitle"  >Total Tasks</h3>
-                            <label class="In-progressTasks"  *ngIf= "totalInprogress">In-progress &nbsp;&nbsp;<span class="numbertotal">{{totalInprogress.length}}</span></label><br>
-                            <label class="completedTasks" *ngIf= "totalCompleted">completed &nbsp;&nbsp;<span class="numbertotal">{{totalInprogress.length}}</span></label>
+                            <svg fill="#000000" height="40px" width="64px" version="1.1" id="XMLID_103_"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            viewBox="0 0 24 24" xml:space="preserve">
+                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                            <g id="SVGRepo_iconCarrier">
+                                <g id="in-progress">
+                                    <g>
+                                        <path
+                                            d="M23,24H1v-2h2.4c-1.6-5,1.6-7,3.7-8.4C8,13,8.9,12.5,8.9,12S8,10.9,7.1,10.4C5,9,1.8,7.1,3.4,2H1V0h22v2h-2.4 c1.6,5-1.6,7-3.7,8.4c-1,0.5-1.9,1.1-1.9,1.6s0.9,1.1,1.8,1.6c2.1,1.4,5.3,3.4,3.7,8.4H23V24z M5.6,22h12.8c1.6-4-0.5-5.3-2.6-6.7 C14.4,14.5,13,13.6,13,12c0-1.6,1.4-2.5,2.8-3.3C17.9,7.3,20,6,18.4,2H5.6C4,6,6.1,7.3,8.2,8.7C9.6,9.5,11,10.4,11,12 c0,1.6-1.4,2.5-2.8,3.3C6.1,16.7,4,18,5.6,22z">
+                                        </path>
+                                    </g>
+                                    <g>
+                                        <path
+                                            d="M16.8,23H7c-0.3-1.5,0.2-2.4,2.3-4.3c0.8-0.7,1.8-1.5,2.7-2.8c1,1.2,2,2.1,2.7,2.8C16.8,20.7,17.3,21,16.8,23z">
+                                        </path>
+                                    </g>
+                                    <g>
+                                        <path
+                                            d="M9.4,6c-0.7,1.3-0.7,1.3,0.9,2.1c0.5,0.2,1.1,0.5,1.6,0.9c0.5-0.4,1.2-0.7,1.6-0.9c1.7-0.8,1.7-0.8,1-2.1">
+                                        </path>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg> <label class="In-progressTasks"  *ngIf= "totalInprogress">In-progress &nbsp;&nbsp;<span class="numbertotal">{{totalInprogress.length}}</span></label><br>
+                            <svg width="40px" height="64px" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M12 21C16.9706 21 21 16.9706 21 12C21 10.1666 20.4518 8.46124 19.5103 7.03891L12.355 14.9893C11.6624 15.7589 10.4968 15.8726 9.66844 15.2513L6.4 12.8C5.95817 12.4686 5.86863 11.8418 6.2 11.4C6.53137 10.9582 7.15817 10.8686 7.6 11.2L10.8684 13.6513L18.214 5.48955C16.5986 3.94717 14.4099 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21Z"
+                                        fill="#222222"></path>
+                                </g>
+                            </svg><label class="completedTasks" *ngIf= "totalCompleted">completed &nbsp;&nbsp;<span class="numbertotal">{{totalInprogress.length}}</span></label>
                           </div>
                       </div>
                 </ul>
