--- a/src/app/admindashboard/admindashboard.component.html
+++ b/src/app/admindashboard/admindashboard.component.html
@@ -128,7 +128,9 @@
                             
                         </div>
                     </div>
-                    
+          
+                </div>
+                <div class="compeltedAndClosedDiv  d-flex ">
                     <div class="ticket card" style="width: 15rem;">
                         <div class="card-body" *ngIf= "statsData">
                             <svg fill="#000000" width="40px" height="64px" viewBox="0 0 24 24"
@@ -141,11 +143,11 @@
                                     </path>
                                 </g>
                             </svg>
-
+    
                             <h4 class="card-title">Completed Logs&nbsp;&nbsp;<span class="numberStats"><b>{{statsData.SoshanguveSouthComplete}}</b></span></h4>    
                         </div>
                     </div>
-                    <div class="ticket card" style="width: 15rem;">
+                    <div class="ticket card " id="closedlogPAdding" style="width: 15rem;">
                         <div class="card-body" *ngFor="let total of totalClosed">
                             <svg fill="#000000" width="40px" height="64px" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -160,9 +162,8 @@
                             <h4 class="card-title">Closed Logs&nbsp;&nbsp;<span class="numberStats"><b>{{total.Total_Closed}}</b></span></h4>
                         </div>
                     </div>
-                    <br>
-                  
                 </div>
+                
                 <!--End of Top Section -->
 
                 <!-- Text in the middle -->
