--- a/src/app/admincloselog/admincloselog.component.html
+++ b/src/app/admincloselog/admincloselog.component.html
@@ -68,7 +68,7 @@
                                 <td>{{data.description}}</td>
                                 <td>{{data.staff_feedback}}</td>
                                 <td class="status">{{data.status}}</td>
-                                <td><button type="button" class="logbtn " (click)="log($event,data.id)" [(ngModel)]="data.status">Log</button> </td>
+                                <td><button type="button" class="logbtn " (click)="log($event,data.id)" >Log</button> </td>
                               </tr>
                             </tbody>
                           </table>
