--- a/src/app/admincloselog/admincloselog.component.html
+++ b/src/app/admincloselog/admincloselog.component.html
@@ -29,7 +29,7 @@
         <div class="sideNav">
             <nav class="breadcrumbNav">
                 <ul>
-                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#" routerLink="/adminpage"  >View Requests</a></li>
+                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#" routerLink="/adminpage"  >View Logs</a></li>
                     <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>Close Logs</a></li>
                     
                         
@@ -58,7 +58,7 @@
                                 <th scope="col">Log Ref</th>
                                 <th scope="col">Staff Name</th>
                                 <th scope="col">Staff-Feedback</th>
-                                <th scope="col">Task Status</th>
+                                <th scope="col">Artisan Status</th>
                                 <th scope="col">Close</th>
                               </tr>
                             </thead>
